--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <li>Grilled Chicken Sandwich</li>
     </ul>
     <h3>Margherita Pizza</h3>
-    <img src="./pizza.jpg" width="450" height="250" alt="pizza">
+    <img src="./image/pizza.jpg " width="450" height="250" alt="pizza">
     <p>Watch tutorial <a style="color: #c8151e;" href="https://www.youtube.com/watch?v=9xwazD5SyVg" target="blank">here</a></p>
     <h3>Spaghetti Bolognese</h3>
-    <img src="./pasta.jpg" width="400" height="250" alt="pasta">
+    <img src="./image/pasta.jpg" width="400" height="250" alt="pasta">
     <p>Watch tutorial <a style="color: #c8151e;" href="https://www.youtube.com/watch?v=9xwazD5SyVg" target="blank">here</a></p>
     <h3>Grilled Chicken Sandwich</h3>
-    <img src="./sandwich.jpg" width="250" height="250" alt="pizza">
+    <img src="./image/sandwich.jpg" width="250" height="250" alt="pizza">
     <p>Watch tutorial <a style="color: #c8151e;" href="https://www.youtube.com/watch?v=9xwazD5SyVg" target="blank">here</a></p>
 
 
